Small tweaks to map section, buttons

--- a/Index.html
+++ b/Index.html
@@ -140,10 +140,10 @@
 			<div id="eventLocationTitle" class="container">
                 <h3>{{'locationName' | translate}}</h3>
             </div>
-            <div id="map" class="text-center"></div>
+            <div id="map" class="text-center container"></div>
         </section>
 		<a class="anchor" id="faqAnchor"></a>
-        <section id="faq" class="row container-fluid text-center">			
+        <section id="faq" class="row container text-center">			
             <h2 class="text-uppercase faq-title">{{'FAQtitle' | translate }}</h2>
 
             <div class="container">
